ref: выделить доп еомпоненты: Input, Form, Popup

--- a/src/blocks/header/__link/header__link.css
+++ b/src/blocks/header/__link/header__link.css
@@ -1,4 +1,13 @@
 .header__link {
+  display: block;
   text-decoration: none;
   color: var(--color-second);
+  order: 1;
 }
+
+@media (min-width: 880px) {
+  .header__link {
+    order: 0;
+  }
+}
+
