--- a/src/blocks/footer/__copyright/footer__copyright.css
+++ b/src/blocks/footer/__copyright/footer__copyright.css
@@ -2,13 +2,13 @@
   color: var(--color-gray);
   max-width: 880px;
   margin: 0 auto;
-  padding: 0 19px 36px;
+  padding: 48px 19px 33px;
 }
 
 @media (min-width: 880px) {
   .footer__copyright {
     font-size: 18px;
     line-height: 22px;
-    padding: 0 0 60px;
+    padding: 66px 0 56px;
   }
 }
