--- a/src/blocks/header/__wrapper/header__wrapper.css
+++ b/src/blocks/header/__wrapper/header__wrapper.css
@@ -1,4 +1,41 @@
 .header__wrapper {
-  display: flex;
-  gap: 24px;
+  display: none;
+  position: absolute;
+  width: 100%;
+  gap: 18px;
+  top: 0;
+  left: 0;
+  padding: 40px 0;
+  flex-direction: column;
+  align-items: center;
+  transition: all 0.5s;
+}
+
+.header__wrapper::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: var(--color-gray-70);
+}
+
+.header_active .header__wrapper {
+display: flex;
+}
+
+@media (min-width: 880px) {
+  .header__wrapper {
+    display: flex;
+    position: static;
+    flex-direction: row;
+    justify-content: flex-end;
+    gap: 24px;
+    padding: 0;
+  }
+
+  .header__wrapper::after {
+    display: none;
+  }
 }
