--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,21 +1,26 @@
 .header {
   display: flex;
   justify-content: space-between;
-  align-items: center;
   max-width: 880px;
   width: 100%;
 
   box-sizing: border-box;
   border-bottom: 1px solid var(--color-gray-70);
-  padding: 28px 0 26px 27px;
+  padding: 28px 30px 31px;
 
   flex-shrink: 0;
+
   font-size: 18px;
   line-height: 22px;
+  transition: all 0.5s;
 }
 
 @media (min-width: 880px) {
   .header {
-    padding: 45px 0 39px 0;
+    border-top: none;
+    padding: 45px 0 40px 0;
+    margin-top: 0;
+
+    align-items: center;
   }
 }
