--- a/src/blocks/sign/__form/sign__form.css
+++ b/src/blocks/sign/__form/sign__form.css
@@ -2,5 +2,11 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
+}
+
+@media (min-width: 880px) {
+  .sign__form {
+    margin-bottom: 15px;
+  }
 }
