--- a/src/blocks/sign/__title/sign__title.css
+++ b/src/blocks/sign/__title/sign__title.css
@@ -1,6 +1,16 @@
 .sign__title {
-  margin: 60px 0 50px;
+  width: 100%;
+  margin: 40px 0;
   font-weight: 900;
-  font-size: 24px;
-  line-height: 29px;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
+}
+
+@media (min-width: 880px) {
+  .sign__title {
+    margin: 60px 0 50px;
+    font-size: 24px;
+    line-height: 29px;
+  }
 }
