--- a/src/blocks/auth/auth.css
+++ b/src/blocks/auth/auth.css
@@ -1,4 +1,4 @@
-.sign {
+.auth {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -7,7 +7,7 @@
 }
 
 @media (min-width: 880px) {
-  .sign {
+  .auth {
     max-width: 358px;
       }
 }
