--- a/src/blocks/form/__button-save/form__button-save.css
+++ b/src/blocks/form/__button-save/form__button-save.css
@@ -1,4 +1,4 @@
-.popup__button-save {
+.form__button-save {
   width: 238px;
   color: var(--color-second);
   background-color: var(--color-main);
@@ -8,11 +8,11 @@
   box-sizing: border-box;
 }
 
-.popup__button-save:hover {
+.form__button-save:not([disabled]):hover {
   opacity: 0.8;
 }
 
-.popup__button-save:disabled {
+.form__button-save:disabled {
   opacity: 0.2;
   border: 1px solid var(--color-main);
   background-color: transparent;
@@ -20,7 +20,7 @@
 }
 
 @media (min-width: 880px) {
-  .popup__button-save {
+  .form__button-save {
     width: 358px;
     font-size: 18px;
     line-height: 22px;
