--- a/src/blocks/form/__label/form__label.css
+++ b/src/blocks/form/__label/form__label.css
@@ -1,14 +1,14 @@
-.popup__label {
+.form__label {
   display: block;
   position: relative;
 }
 
-.popup__label:last-of-type {
+.form__label:last-of-type {
   margin-bottom: 15px;
 }
 
 @media (min-width: 880px) {
-  .popup__label:last-of-type {
+  .form__label:last-of-type {
     margin-bottom: 18px;
   }
 }
