--- a/src/blocks/auth/auth.css
+++ b/src/blocks/auth/auth.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   max-width: 260px;
-  margin: auto;
+  margin: 0 auto;
 }
 
 @media (min-width: 880px) {
