--- a/src/blocks/header/__button-toggle/header__button-toggle.css
+++ b/src/blocks/header/__button-toggle/header__button-toggle.css
@@ -2,10 +2,14 @@
   position: relative;
   display: flex;
   align-self: flex-end;
+
+  justify-self: end;
+
   width: 24px;
   height: 21px;
   order: 3;
 }
+
 @media (min-width: 880px) {
   .header__button-toggle {
     display: none;
