--- a/src/blocks/gallery/__photo/gallery__photo.css
+++ b/src/blocks/gallery/__photo/gallery__photo.css
@@ -5,6 +5,8 @@
   cursor: pointer;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  border: none;
+  width: 100%;
 }
 
 .gallery__photo:hover {
