--- a/src/blocks/header/__wrapper/header__wrapper.css
+++ b/src/blocks/header/__wrapper/header__wrapper.css
@@ -1,12 +1,17 @@
 .header__wrapper {
+  opacity: 0;
+  top: -142px;
+  left: 50%;
   display: flex;
   gap: 18px;
   padding: 40px 0 41px;
   flex-direction: column;
   align-items: center;
   transition: all 0.5s;
-
+  position: absolute;
   grid-column: 1/-1;
+  transform: translateX(-50%);
+  transition: all 0.5s ease-out;
 }
 
 @media (min-width: 880px) {
@@ -17,5 +22,11 @@
     justify-content: flex-end;
     gap: 24px;
     padding: 0;
+    transform: translateX(0);
+    opacity: 1;
   }
+}
+
+.header_active .header__wrapper {
+  opacity: 1;
 }
