--- a/src/blocks/header/_active/header_active.css
+++ b/src/blocks/header/_active/header_active.css
@@ -1,3 +1,9 @@
 .header_active {
-  margin-top: 0;
+  margin-top: 142px;
+}
+
+@media (min-width: 880px) {
+  .header_active {
+    margin-top: 0;
+  }
 }
