--- a/src/blocks/header/_login/header_login.css
+++ b/src/blocks/header/_login/header_login.css
@@ -1,18 +1,19 @@
 .header_login {
   display: grid;
-  margin-top: -142px;
-  padding-top: 0;
 }
 
-.header_login::before{
+.header_login::before {
   content: "";
   position: absolute;
   display: flex;
-  top: 140px;
+  top: 0;
   left: 0;
   width: 100%;
   height: 1px;
   background-color: var(--color-gray-70);
+  display: block;
+  transition: all 0.5s ease-out;
+  opacity: 0;
 }
 
 @media (min-width: 880px) {
@@ -21,8 +22,12 @@
     margin-top: 0;
     padding-top: 45px;
   }
-  
+
   .header_login::before {
     display: none;
   }
+}
+
+.header_active.header_login::before {
+  opacity: 1;
 }
