--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,14 +1,11 @@
 .profile__avatar {
   display: block;
   width: 120px;
-  height: 120px;
+  aspect-ratio: 1;
   border-radius: 50%;
+  object-fit: cover;
 
-  margin-bottom: 26px;
-  flex-shrink: 0;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  
 }
 
 @media (min-width: 880px) {
